<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/list_user" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorite"
        android:foregroundGravity="bottom"
        app:backgroundTint="?attr/colorSecondary"
        app:fabSize="normal"
        app:layout_anchor="@id/rv_user"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_favorite"
        app:tint="#FF0000"
        app:cardElevation="10dp"/>

    <View
        android:id="@+id/progress_bar_darker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/progress_bar_info1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/memuat_data"
        android:layout_marginTop="120dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center_horizontal|center_vertical"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/progress_bar_info2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/terkoneksi_dengan_internet"
        android:layout_marginTop="180dp"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:gravity="center_horizontal|center_vertical"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>