<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.github.UserGithubActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleTextAppearance="@android:style/TextAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/material_on_surface_emphasis_high_type"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_avatar" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/url"
                    android:textColor="@color/material_on_surface_emphasis_medium"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_name"
                    app:layout_constraintStart_toStartOf="@id/tv_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_name" />

                <com.github.ivbaranov.mfb.MaterialFavoriteButton
                    android:id="@+id/imageFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/tv_user_data"
                    app:layout_constraintEnd_toEndOf="@+id/tv_username"
                    app:layout_constraintStart_toStartOf="@+id/tv_username"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username"
                    app:mfb_animate_favorite="true"
                    app:mfb_animate_unfavorite="true"
                    app:mfb_bounce_duration="500"
                    app:mfb_favorite_image="@drawable/ic_favorite"
                    app:mfb_not_favorite_image="@drawable/ic_unfavorite"
                    app:mfb_rotation_angle="360"
                    app:mfb_rotation_duration="400" />

                <LinearLayout
                    android:id="@+id/tv_user_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageFavorite"
                    app:layout_constraintStart_toStartOf="@+id/imageFavorite"
                    app:layout_constraintTop_toBottomOf="@+id/imageFavorite">

                    <TextView
                        android:id="@+id/tv_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/repository"
                        android:textColor="@color/material_on_surface_emphasis_high_type"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_repository_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/value"
                        android:textColor="@color/material_on_surface_emphasis_medium"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/follower"
                        android:textColor="@color/material_on_surface_emphasis_high_type"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@+id/tv_followers_value" />

                    <TextView
                        android:id="@+id/tv_followers_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:paddingRight="8dp"
                        android:text="@string/value"
                        android:textColor="@color/material_on_surface_emphasis_medium"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@+id/tv_following" />

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/following"
                        android:textColor="@color/material_on_surface_emphasis_high_type"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@+id/tv_following_value" />

                    <TextView
                        android:id="@+id/tv_following_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/value"
                        android:textColor="@color/material_on_surface_emphasis_medium"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="parent" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabIndicatorColor="@android:color/white"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/material_on_surface_emphasis_high_type"
            app:tabTextColor="@color/material_on_surface_emphasis_medium" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <View
        android:id="@+id/progress_bar_darker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        tools:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/progress_bar_info1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/memuat_data"
        android:layout_marginTop="120dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center_horizontal|center_vertical"
        android:visibility="gone"
        tools:visibility="invisible"/>

    <TextView
        android:id="@+id/progress_bar_info2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/terkoneksi_dengan_internet"
        android:layout_marginTop="180dp"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:gravity="center_horizontal|center_vertical"
        android:visibility="gone"
        tools:visibility="invisible"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>